--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>YouTube Unbl*cked</title>
+	<title>YouTube</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<link href="style.css" rel="stylesheet" type="text/css" />
@@ -51,8 +51,7 @@
     <footer class="center">
     	<br>
       <hr>
-    	<p>Made by <a class="linelink" href="https://jcwyt.com" target="_blank">jcwyt.com</a><br>
-		Join our <a class="linelink" href="https://jcwyt.com/discord" target="_blank">Discord Server!</a></p>
-    </footer>
+    	<p>This is not mine but heres my website<a class="linelink" href="https://geovani.carrd.co/" target="_blank">geovani.carrd.co</a><br>
+        </footer>
 	<script src="script.js"></script>
 </html>
