--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>YouTube</title>
+	<title>geovani's youtube</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<link href="style.css" rel="stylesheet" type="text/css" />
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-	<h1 class="center">YouTube Unbl*cked</h5>
+	<h1 class="center">geovani's youtube</h5>
 		<div class=center>
 			<h3>Insert YouTube Link:</h3>
 			<input id="url" type="text" placeholder="" required>
@@ -51,7 +51,7 @@
     <footer class="center">
     	<br>
       <hr>
-    	<p>This is not mine but heres my website<a class="linelink" href="https://geovani.carrd.co/" target="_blank">geovani.carrd.co</a><br>
+    	<p>This is not mine but heres my website<a class ="linelink" href="https://geovani.carrd.co/" target="_blank">geovani.carrd.co</a><br>
         </footer>
 	<script src="script.js"></script>
 </html>
