--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <footer class="center">
     	<br>
       <hr>
-    	<p>This is not mine but heres my website<a class ="linelink" href="https://geovaniw.carrd.co/" target="_blank">geovani.carrd.co</a><br>
+        <a href="/">My Website</a>
         </footer>
 	<script src="script.js"></script>
 </html>
